# rslearn

./: .gitignore  .pre-commit-config.yaml  DatasetConfig.md  Dockerfile  Quickstart.md  README.md  docker-compose.yaml  extra_requirements.txt  pr_review.md  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: build-test.yml  data-source-integration-test.yml  lint.yml  publish.yml
benchmarks/: olmoearth_all_models_cpu_mps_500px_2026-04-01.json  olmoearth_all_models_cpu_mps_benchmark_2026-04-01.json
design/: Architecture.md  FeatureList.md  Overview.md
design/workflows/: GlobalWebMercatorInference.md  SolarFarms.md
docs/: Compositors.md  CoreConcepts.md  DataSources.md  DatasetAddWindows.md  DatasetConfig.md  DatasetFormat.md  Development.md  Examples.md  HyperparameterStrategy.md  ModelConfig.md  Releasing.md  TasksAndModels.md  Transforms.md  WorkflowOverview.md
docs/compositors/: built_in.md  hls_fmask_HlsFmaskFirstValid.md  omni_cloud_mask_OmniCloudMaskFirstValid.md  sentinel2_eda_cloud_mask_Sentinel2EDACloudMaskFirstValid.md  sentinel2_scl_Sentinel2SCLBestClear.md  sentinel2_scl_Sentinel2SCLFirstValid.md
docs/data_sources/: alphaearth_AlphaEarth.md  aws_google_satellite_embedding_v1.md  aws_landsat_LandsatOliTirs.md  aws_open_data_Naip.md  aws_open_data_Sentinel2.md  aws_sentinel1_Sentinel1.md  aws_sentinel2_element84_Sentinel2.md  chelsa_CHELSADaily.md  climate_data_store.md  copernicus.md  copernicus_glo30_CopernicusGLO30.md  earthdaily.md  earthdaily_Biophysical.md  earthdaily_Sentinel2.md  earthdaily_Sentinel2C1L2A.md  earthdaily_Sentinel2EDACloudMask.md  earthdaily_Sentinel2L2A.md  earthdatahub_ERA5LandDailyUTCv1.md  eurocrops_EuroCrops.md  gcp_landsat_Landsat.md  gcp_public_data_Sentinel2.md  google_earth_engine_GEE.md  google_earth_engine_GoogleSatelliteEmbeddings.md  hf_srtm_SRTM.md  local_files_LocalFiles.md  nasa_hls_Hls2.md  openstreetmap_OpenStreetMap.md  planetary_computer_CopDemGlo30.md  planetary_computer_Hls2.md  planetary_computer_LandsatC2L2.md  planetary_computer_Naip.md  planetary_computer_PlanetaryComputer.md  planetary_computer_Sentinel1.md  planetary_computer_Sentinel2.md  planetary_computer_Sentinel3SlstrLST.md  soildb_SoilDB.md  soilgrids_SoilGrids.md  usda_cdl_CDL.md  usgs_landsat_LandsatOliTirs.md  worldcereal_WorldCereal.md  (+3 more)
docs/dataset_config/: DataSourceConfig.md  LayerConfig.md  TileStoreConfig.md  WindowDataStorageConfig.md  WindowStorageConfig.md
docs/examples/: BitemporalSentinel2.md  EarthDailyCloudMaskClearCover.md  EarthDailySentinel2Biophysical.md  FindStadiums.md  FinetuneOlmoEarth.md  GetImageTimeSeries.md  IntroExample.md  NaipSentinel2.md  OlmoEarthEmbeddings.md  OlmoEarthEmbeddingsBenchmark.md  OlmoEarthEmbeddingsLocalAttention.md  ProgrammaticWindows.md  WindowsFromGeojson.md  ZarrDataSource.md  align_item_groups_by_name.py  align_item_groups_by_timestamp.py  select_earthdaily_sentinel2_by_cloud_mask.py
docs/foundation_models/: OlmoEarth.md  SatlasPretrain.md  Tessera.md
rslearn/: arg_parser.py  const.py  lightning_cli.py  main.py
rslearn/config/: __init__.py  dataset.py
rslearn/data_sources/: __init__.py  alphaearth.py  aws_google_satellite_embedding_v1.py  aws_landsat.py  aws_open_data.py  aws_sentinel1.py  aws_sentinel2_element84.py  azure_sentinel1.py  azure_sentinel2.py  cci_biomass.py  chelsa.py  climate_data_store.py  copernicus.py  copernicus_glo30.py  data_source.py  direct_materialize_data_source.py  earthdaily.py  earthdata_srtm.py  earthdatahub.py  eurocrops.py  firms.py  gcp_landsat.py  gcp_public_data.py  google_earth_engine.py  hf_srtm.py  local_files.py  nasa_hls.py  olmoearth_datasets.py  omnicloudmask_utils.py  openstreetmap.py  planet.py  planet_basemap.py  planetary_computer.py  raster_source.py  soildb.py  soilgrids.py  stac.py  stac_utils.py  tile_store_data_source.py  usda_cdl.py  (+8 more)
rslearn/dataset/: __init__.py  add_windows.py  compositing.py  dataset.py  handler_summaries.py  hls_fmask.py  index.py  manage.py  materialize.py  omni_cloud_mask.py  raster_storage.py  remap.py  sentinel2_eda_cloud_mask.py  sentinel2_scl.py  tile_utils.py  window.py
rslearn/models/: CrossAttentionFusionExtractor.py  LateFusionFeatureExtractor.py  anysat.py  attention_pooling.py  clay.py  clip.py  component.py  concat_feature_extractor.py  concatenate_features.py  conv.py  copernicusfm.py  croma.py  dinov2.py  dinov3.py  dual_encoder.py  embedding_cache.py  faster_rcnn.py  fpn.py  galileo.py  global_pool.py  late_fusion_extractor_v2.py  layer_norm.py  module_wrapper.py  molmo.py  multitask.py  panopticon.py  pick_features.py  pixel_shuffle.py  pooling.py  pooling_decoder.py  prithvi.py  raster_stride_encoder.py  registry.py  sam2_enc.py  satlaspretrain.py  simple_time_series.py  singletask.py  ssl4eo_s12.py  swin.py  task_embedding.py  (+10 more)
rslearn/serve/: __init__.py  request.py
rslearn/tile_stores/: __init__.py  default.py  file.py  tile_store.py
rslearn/train/: all_crops_dataset.py  dataset.py  (+11 more)
scripts/: benchmark_olmoearth_embeddings.py  compare_s2_scl_vs_omnicloudmask.py
tests/: __init__.py  conftest.py  fake-gcs_service-account.json  test_archive_utils.py
(+341 files in other folders)
