[project]
name = "rslearn"
version = "0.0.2"
description = "A library for developing remote sensing datasets and models"
authors = [
    {name = "Favyen Bastani", email = "favyenb@allenai.org"},
    {name = "Yawen Zhang", email = "yawenz@allenai.org"},
    {name = "Patrick Beukema", email = "patrickb@allenai.org"},
    {name = "Henry Herzog", email = "henryh@allenai.org"},
    {name = "Piper Wolters", email = "piperw@allenai.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "^3.11"
dependencies = [
    "boto3 (~=1.35)",
    "class-registry (~=2.1)",
    "fiona (~=1.10)",
    "fsspec (>=2025.2)",
    "lightning[pytorch-extra] (~=2.5)",
    "pillow (~=11.0)",
    "pyproj (~=3.7)",
    "python-dateutil (~=2.9)",
    "pytimeparse (~=1.1)",
    "rasterio (~=1.4)",
    "shapely (~=2.0)",
    "torchvision (~=0.21)",
    "tqdm (~=4.66)",
    "universal-pathlib (~=0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rslearn = "rslearn.main:main"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]
tmp_path_retention_policy = "failed"

[tool.poetry.group.extra.dependencies]
accelerate = ">=1.0,<2.0"
cdsapi = ">=0.7.4,<1.0"
earthengine-api = ">=0.1,<1.0"
einops = ">=0.8,<1.0"
gcsfs = ">=2025.2.0"
google-cloud-bigquery = ">=3.0,<4.0"
google-cloud-storage = ">=3.0,<4.0"
interrogate = ">=1.7,<2.0"
netcdf4 = ">=1.7.2,<2.0"
osmium = ">=4.0,<5.0"
planet = ">=2.10,<3.0"
planetary-computer = ">=1.0,<2.0"
pycocotools = ">=2.0,<3.0"
pystac-client = ">=0.8,<1.0"
rtree = ">=1.2,<2.0"
s3fs = ">=2025.2.0"
satlaspretrain-models = ">=0.3,<1.0"
scipy = ">=1.13,<2.0"
terratorch = ">=1.0.2,<2.0"
transformers = ">=4.45,<5.0"
wandb = ">=0.17,<1.0"


[tool.poetry.group.test.dependencies]
pytest = ">=8.3,<9.0"
pytest-dotenv = ">=0.5.2,<1.0"
pytest-httpserver = ">=1.1.3,<2.0"
pytest-xdist = ">=3.8.0,<4.0"

