[project]
name = "rslearn"
version = "0.0.2"
description = "A library for developing remote sensing datasets and models"
authors = [
    {name = "Favyen Bastani", email = "favyenb@allenai.org"},
    {name = "Yawen Zhang", email = "yawenz@allenai.org"},
    {name = "Patrick Beukema", email = "patrickb@allenai.org"},
    {name = "Henry Herzog", email = "henryh@allenai.org"},
    {name = "Piper Wolters", email = "piperw@allenai.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.35",
    "class_registry>=2.1",
    "fiona>=1.10",
    "fsspec>=2025.2.0",
    "lightning[pytorch-extra]>=2.5.0.post0",
    "Pillow>=11.0",
    "pyproj>=3.7",
    "python-dateutil>=2.9",
    "pytimeparse>=1.1",
    "rasterio>=1.4",
    "shapely>=2.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66",
    "universal_pathlib>=0.2.5",
]

[project.optional-dependencies]
# These are requirements that are specific to a subset of data sources or models.
extra = [
    "accelerate>=1.0",
    "cdsapi>=0.7.4",
    "earthengine-api>=0.1",
    "einops>=0.8",
    "gcsfs==2025.2.0",
    "google-cloud-bigquery>=2.18",
    "google-cloud-storage>=2.18",
    "interrogate>=1.7",
    "netCDF4>=1.7.2",
    "osmium>=3.7",
    "planet>=2.10",
    "planetary_computer>=1.0",
    "pycocotools>=2.0",
    "pystac_client>=0.8",
    "rtree>=1.2",
    "s3fs==2025.2.0",
    "satlaspretrain_models>=0.3",
    "scipy>=1.13",
    "terratorch>=1.0.2",
    "transformers>=4.45",
    "wandb>=0.17",
]

dev = [
    "pytest>=8.0",
    "pytest_httpserver",
    "ruff>=0.12.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.entry-points.console_scripts]
rslearn = "rslearn.main:main"

[tool.setuptools.packages.find]
include = ["rslearn*"]

[tool.setuptools.package-data]
rslearn = ["py.typed"]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]
tmp_path_retention_policy = "failed"
